[gd_scene load_steps=6 format=3 uid="uid://bg3bbgnrivco0"]

[ext_resource type="Script" path="res://Scripts/Utilities/CustomerServiceEvents.gd" id="1_33txh"]
[ext_resource type="Texture2D" uid="uid://d0l8ke3hsnvve" path="res://Assets/Scenes/CustomerService/Spr_customerserviceBG_01.png" id="1_yi7jp"]
[ext_resource type="Texture2D" uid="uid://c6wygc7bx5ett" path="res://Assets/Scenes/CustomerService/Spr_customerserviceDesk_01.png" id="2_i4ptf"]
[ext_resource type="FontFile" uid="uid://br16r50alhowl" path="res://Assets/Fonts/PressStart2P/PressStart2P.otf" id="4_uswjl"]
[ext_resource type="Script" path="res://Scripts/Utilities/CustomerResponseEvents.gd" id="5_8lokd"]

[node name="CustomerService" type="Node2D"]
script = ExtResource("1_33txh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)
texture = ExtResource("1_yi7jp")
stretch_mode = 2

[node name="CustomerModel" type="TextureRect" parent="Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 313.0
offset_top = 54.0
offset_right = 353.0
offset_bottom = 94.0
scale = Vector2(4, 4)
stretch_mode = 2

[node name="Desk" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)
texture = ExtResource("2_i4ptf")
stretch_mode = 2

[node name="CustomerDialogPanel" type="Panel" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 63.0
offset_top = 16.0
offset_right = 317.0
offset_bottom = 106.0

[node name="CustomerLabel" type="RichTextLabel" parent="Control/CustomerDialogPanel"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 77.0
offset_bottom = 17.0
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
text = "Customer:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CustomerDialog" type="RichTextLabel" parent="Control/CustomerDialogPanel"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -11.0
offset_right = 124.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 6
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="PlayerResponsePanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 67.0
offset_top = 118.0
offset_right = 317.0
offset_bottom = 319.0

[node name="PlayerResponseLabel" type="RichTextLabel" parent="Control/PlayerResponsePanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 116.0
offset_bottom = 19.0
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
text = "Your Response:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="BestResponseButton" type="Button" parent="Control/PlayerResponsePanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 27.0
offset_right = 241.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("4_uswjl")
theme_override_font_sizes/font_size = 7
script = ExtResource("5_8lokd")
metadata/ResponseGrade = "best"

[node name="BestResponseText" type="RichTextLabel" parent="Control/PlayerResponsePanel/BestResponseButton"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/line_separation = 4
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="GoodResponseButton" type="Button" parent="Control/PlayerResponsePanel"]
offset_left = 9.0
offset_top = 69.0
offset_right = 241.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("4_uswjl")
theme_override_font_sizes/font_size = 6
script = ExtResource("5_8lokd")
metadata/ResponseGrade = "good"

[node name="GoodResponseText" type="RichTextLabel" parent="Control/PlayerResponsePanel/GoodResponseButton"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/line_separation = 4
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="BadResponseButton" type="Button" parent="Control/PlayerResponsePanel"]
offset_left = 9.0
offset_top = 111.0
offset_right = 241.0
offset_bottom = 147.0
theme_override_fonts/font = ExtResource("4_uswjl")
theme_override_font_sizes/font_size = 6
script = ExtResource("5_8lokd")
metadata/ResponseGrade = "bad"

[node name="BadResponseText" type="RichTextLabel" parent="Control/PlayerResponsePanel/BadResponseButton"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/line_separation = 4
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="WorstResponseButton" type="Button" parent="Control/PlayerResponsePanel"]
offset_left = 9.0
offset_top = 152.0
offset_right = 241.0
offset_bottom = 188.0
theme_override_fonts/font = ExtResource("4_uswjl")
theme_override_font_sizes/font_size = 6
script = ExtResource("5_8lokd")
metadata/ResponseGrade = "worst"

[node name="WorstResponseText" type="RichTextLabel" parent="Control/PlayerResponsePanel/WorstResponseButton"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/line_separation = 4
theme_override_fonts/normal_font = ExtResource("4_uswjl")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false

[connection signal="pressed" from="Control/PlayerResponsePanel/BestResponseButton" to="Control/PlayerResponsePanel/BestResponseButton" method="_on_button_player_response_pressed"]
[connection signal="pressed" from="Control/PlayerResponsePanel/GoodResponseButton" to="Control/PlayerResponsePanel/GoodResponseButton" method="_on_button_player_response_pressed"]
[connection signal="pressed" from="Control/PlayerResponsePanel/BadResponseButton" to="Control/PlayerResponsePanel/BadResponseButton" method="_on_button_player_response_pressed"]
[connection signal="pressed" from="Control/PlayerResponsePanel/WorstResponseButton" to="Control/PlayerResponsePanel/WorstResponseButton" method="_on_button_player_response_pressed"]
